# grapro

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  camera.save  grapro.cfg  run.sh
pdf/assignment/: Makefile  a5.aux  a5.tex
pdf/assignment/gdv/: faltmarken.eps  fensterrahmen.eps  gdv.cls
pdf/assignment/gdv/LOGOS/FAU/EPS/: Schloss.eps  balken.eps  fau-logo.eps  fau-logo_rot.eps  fautxt.eps
pdf/assignment/gdv/LOGOS/LGDV/EPS/: lgdv-de-bw.eps  lgdv-en-bw.eps
pdf/assignment/gdv/LOGOS/Techfak/EPS/: techfak-logo.eps  techfak-logo_bw.eps  techfak_komb.eps  techfak_komb_gr.eps  techfaktxt.eps  techfaktxt_bw.eps
pdf/presentation/: Makefile  slides-a5.tex
pdf/presentation/lgdv/: beamercolorthemelgdvInnerCol.sty  beamercolorthemelgdvOuterCol.sty  beamerinnerthemelgdv.sty  beamerouterthemelgdv.sty  beamerthemelgdv.sty  beamerthemetest.sty  example-pres.tex  lgdv-en-cl-mirror.eps
scenes/: pkbox.dae  spheres.dae
scenes/sponza/: lights.dae  sponza.mtl  sponza_noflag.mtl
shaders/basic/: basic.frag  basic.vert  bbox.frag  bbox.vert  debug.vert  debug_tex.frag  depth_only.frag  depth_only.vert  diffuse.frag  direct_lighting.frag  downsample_depth.comp  gamma.frag  noop.frag  occlusionculling.comp  shadow.geom  shadow.vert  shadow_cube.geom  ssq.frag  ssq.vert  vertexpulling.frag  vertexpulling.vert
shaders/common/: bindings.glsl  camera.glsl  compression.glsl  extensions.glsl  gbuffer.glsl  instances.glsl  lights.glsl  materials.glsl  meshes.glsl  textures.glsl  vertices.glsl  voxel.glsl
shaders/conetracing/: conetracing.frag  gbuffer.frag  indirect.frag  indirect_diffuse.frag  indirect_specular.frag  ssq_ao.frag  ssq_ao.vert
shaders/gui/: gui.frag  gui.vert
shaders/smaa/: blending_weight_calculation.frag  blending_weight_calculation.vert  edgedetect.frag  edgedetect.vert  neighborhood_blending.frag  neighborhood_blending.vert  smaa.glsl
shaders/tree/: bbox.frag  bbox.vert  colorboxes.frag  colorboxes.geom  colorboxes.vert  flagoctree.comp  inject_direct_lighting.comp  leafstore.comp  mipmap.comp  mipmap2.comp  mipmap3.comp  mipmap4.comp  nodealloc.comp  nodealloc_bm.comp  nodealloc_pk.comp  nodeflag.comp  nodeflag_bm.comp  nodeflag_pk.comp  nodeinit.comp  to_neighbors.comp  trianglemod.frag  trianglemod.geom  voxel.glsl  voxelize.frag  voxelize.geom
src/: gbuffer.cpp  gbuffer.h  grapro.cpp  grapro.h  main.cpp  offscreen_buffer.cpp  offscreen_buffer.h  renderer.cpp  renderer.h  rendererimpl_bm.cpp  rendererimpl_bm.h  rendererimpl_pk.cpp  rendererimpl_pk.h  rendererinterface.cpp  rendererinterface.h  voxel.h
src/core/: aabb.h  buffer_storage.cpp  buffer_storage.h  buffer_storage_pool.h  camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  instance.cpp  instance.h  instance_manager.cpp  instance_manager.h  light.cpp  light.h  light_manager.cpp  light_manager.h  loader.cpp  loader.h  managers.cpp  managers.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  node.cpp  node.h  program.cpp  program.h  program_pipeline.cpp  program_pipeline.h  shader.cpp  shader.h  shader_interface.h  shader_manager.cpp  shader_manager.h  texture.cpp  (+7 more)
src/framework/: buffer_storage.cpp  buffer_storage.h  config_file.cpp  config_file.h  glfw.cpp  glfw.h  imconfig.h  imgui.cpp  mainwindow.cpp  mainwindow.h  vars.cpp  vars.def  vars.h  window.cpp  window.h
src/gl/: gl_objects.h  gl_sys.cpp  gl_sys.h  glew.c  glew.h  glxew.h  nogen.h  opengl.h  program.cpp  program.h  shader.cpp  shader.h  shadersource.cpp  shadersource.h  tex_formats.cpp  tex_formats.h
src/import/: assimporter.cpp  assimporter.h  camera.cpp  camera.h  image.cpp  image.h  import.cpp  import.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h  scene.cpp  scene.h  texture.cpp  texture.h
src/log/: entry.h  enums.cpp  enums.h  log.h  ostream_sink.cpp  ostream_sink.h  relay.cpp  relay.h  relay_impl.cpp  relay_impl.h  relay_threadsafe_impl.cpp  relay_threadsafe_impl.h  sink.h  tags.def
src/util/: bitfield.h  debug.cpp  debug.h  debugbreak.h
